microservices-on-openshift/quarkus/product/argocd/plain-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: product
  name: product
  namespace: product-plain-yaml  
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: product
    deploymentconfig: product
  sessionAffinity: None
  type: ClusterIP
