microservices-on-openshift/quarkus/product/argocd/plain-yaml/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: product
  name: product
  namespace: product-plain-yaml  
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: product
    weight: 100
  wildcardPolicy: None
